add banner section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Agency WebSite</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+  <header>
+    <nav class="nav-container">
+      <div class="nav-logo">
+        <img src="asset/logo/logo.png" alt="">
+      </div>
+      <div class="nav-item">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">contact</a></li>
 
+        </ul>
+      </div>
+    </nav>
+    <div class="banner-container">
+      <div class="banner-info">
+        <h1 class="banner_title">Digital</span> Agency You <br />
+          Can Rely Upon !</h1>
+        <p class="banner_description">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt,
+          semper metus, nibh adipisci assumenda odio, quos, senectus vehicula
+          occaecat, officiis malesuada cras.</p>
+        <button class="btn-primary">Discover More</button>
+        <button class="btn-primary">Hire us now</button>
+      </div>
+    </div>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
 
 </html>
