--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="banner-container">
       <div class="banner-info">
-        <h1 class="banner_title">Digital</span> Agency You <br />
+        <h1 class="banner_title"><span>Digital</span> Agency You <br />
           Can Rely Upon !</h1>
         <p class="banner_description">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt,
           semper metus, nibh adipisci assumenda odio, quos, senectus vehicula
